--- a/index.html
+++ b/index.html
@@ -1,180 +1,287 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Snake Game with Images</title>
-  <style>
-    body {
-      background-color: #000000; /* black background */
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-      font-family: Arial, sans-serif;
-      color: #fff;
-    }
-
-    h1 {
-      margin-bottom: 10px;
-    }
-
-    #info {
-      font-size: 18px;
-      margin-bottom: 15px;
-    }
-
-    canvas {
-      background-color: #cf8435; /* brown play area */
-      border: 2px solid #fff;
-      box-shadow: 0 0 10px #2f1c02;
-    }
-
-    #restart-btn {
-      display: none;
-      margin-top: 15px;
-      padding: 10px 20px;
-      font-size: 16px;
-      background-color: #f4b400;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      color: #000;
-      font-weight: bold;
-    }
-
-    #restart-btn:hover {
-      background-color: #ffd54f;
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>🐝 Gensyn Bee Game</title>
+<style>
+body {
+  background-color: #000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  margin: 0;
+  font-family: Arial, sans-serif;
+  color: #fff;
+}
+h1 {
+  margin-bottom: 10px;
+}
+#info {
+  font-size: 18px;
+  margin-bottom: 15px;
+}
+canvas {
+  background-color: #988672;
+  border: 2px solid #fff;
+  box-shadow: 0 0 10px #a39075;
+  position: relative;
+}
+#restart-btn, #start-btn {
+  display: none;
+  margin-top: 15px;
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #f4b400;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  color: #000;
+  font-weight: bold;
+}
+#restart-btn:hover, #start-btn:hover {
+  background-color: #ffd54f;
+}
+#game-container {
+  position: relative;
+  width: 400px;
+  height: 400px;
+  display: none; /* hidden until game starts */
+}
+#start-box {
+  background-color: rgba(0, 0, 0, 0.85);
+  border: 2px solid #f4b400;
+  border-radius: 12px;
+  padding: 20px;
+  width: 380px;
+  text-align: center;
+  box-shadow: 0 0 15px #f4b400;
+}
+#high-scores {
+  margin-top: 10px;
+  font-size: 14px;
+  color: #ffdf80;
+  text-align: center;
+}
+#controls {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+.ctrl-btn {
+  width: 50px;
+  height: 50px;
+  margin: 5px;
+  background-color: #f4b400;
+  border: none;
+  border-radius: 5px;
+  font-size: 24px;
+  cursor: pointer;
+  color: #000;
+  font-weight: bold;
+}
+.ctrl-btn:hover {
+  background-color: #ffd54f;
+}
+#game-container::after {
+  content: attr(data-highscore);
+  position: absolute;
+  top: -25px;
+  right: calc(60px + 6cm);
+  font-size: 16px;
+  color: #ffdf80;
+  background: rgba(0,0,0,0.6);
+  padding: 3px 8px;
+  border-radius: 6px;
+}
+</style>
 </head>
 <body>
-  <h1>🐝 Gensyn Bee Game</h1>
-  <div id="info">
-    <span id="score">Score: 0</span> |
-    <span id="level">Level: 1</span>
-  </div>
+<h1>🐝 Gensyn Bee Game</h1>
+<div id="info">
+  <span id="score">Score: 0</span> | <span id="level">Level: 1</span>
+</div>
+
+<!-- ✅ Intro Box -->
+<div id="start-box">
+  <h2>Welcome to the Gensyn Bee Game 🐝</h2>
+  <p>
+    Help the bee collect pollen 🌸 and avoid the hive walls!<br />
+    Use the arrow keys or on-screen buttons to move.<br /><br />
+    Enter your name to begin:
+  </p>
+  <input type="text" id="player-name" placeholder="Enter your name" /><br /><br />
+  <button id="start-btn" onclick="startGame()">Start Game</button>
+  <div id="high-scores"></div>
+</div>
+
+<!-- ✅ Game container hidden initially -->
+<div id="game-container">
   <canvas id="game" width="400" height="400"></canvas>
-  <button id="restart-btn" onclick="restartGame()">Restart Game</button>
+</div>
 
-  <script>
-    const canvas = document.getElementById("game");
-    const ctx = canvas.getContext("2d");
-    const box = 20;
+<button id="restart-btn" onclick="restartGame()">Restart Game</button>
 
-    const snakeImage = new Image();
-    snakeImage.src = "bee.jpg"; // your snake image
+<div id="controls">
+  <button class="ctrl-btn" onclick="setDirectionByButton('UP')">⬆️</button>
+</div>
+<div id="controls">
+  <button class="ctrl-btn" onclick="setDirectionByButton('LEFT')">⬅️</button>
+  <button class="ctrl-btn" onclick="setDirectionByButton('DOWN')">⬇️</button>
+  <button class="ctrl-btn" onclick="setDirectionByButton('RIGHT')">➡️</button>
+</div>
 
-    const foodImage = new Image();
-    foodImage.src = "pollen.jpg"; // your food image
+<script>
+const canvas = document.getElementById("game");
+const ctx = canvas.getContext("2d");
+const box = 20;
+const snakeImage = new Image();
+snakeImage.src = "bee.jpg";
+const foodImage = new Image();
+foodImage.src = "pollen.jpg";
 
-    let snake = [{ x: 9 * box, y: 10 * box }];
-    let food = {
-      x: Math.floor(Math.random() * 19 + 1) * box,
-      y: Math.floor(Math.random() * 19 + 1) * box
-    };
+let snake = [{ x: 9 * box, y: 10 * box }];
+let food = { x: Math.floor(Math.random() * 19 + 1) * box, y: Math.floor(Math.random() * 19 + 1) * box };
+let direction;
+let score = 0;
+let level = 1;
+let speed = 200;
+let game;
+let playerName = "";
 
-    let direction;
-    let score = 0;
-    let level = 1;
-    let speed = 200;
-    let game;
-    const restartBtn = document.getElementById("restart-btn");
+const restartBtn = document.getElementById("restart-btn");
+const startBox = document.getElementById("start-box");
+const gameContainer = document.getElementById("game-container");
+const highScoresDiv = document.getElementById("high-scores");
 
-    document.addEventListener("keydown", setDirection);
+document.addEventListener("keydown", setDirection);
 
-    function setDirection(e) {
-      if (e.keyCode == 37 && direction != "RIGHT") direction = "LEFT";
-      else if (e.keyCode == 38 && direction != "DOWN") direction = "UP";
-      else if (e.keyCode == 39 && direction != "LEFT") direction = "RIGHT";
-      else if (e.keyCode == 40 && direction != "UP") direction = "DOWN";
-    }
+function setDirection(e) {
+  if (e.keyCode == 37 && direction != "RIGHT") direction = "LEFT";
+  else if (e.keyCode == 38 && direction != "DOWN") direction = "UP";
+  else if (e.keyCode == 39 && direction != "LEFT") direction = "RIGHT";
+  else if (e.keyCode == 40 && direction != "UP") direction = "DOWN";
+}
 
-    function collision(head, array) {
-      return array.some(part => head.x === part.x && head.y === part.y);
-    }
+function setDirectionByButton(dir) {
+  if (dir === "LEFT" && direction != "RIGHT") direction = "LEFT";
+  else if (dir === "UP" && direction != "DOWN") direction = "UP";
+  else if (dir === "RIGHT" && direction != "LEFT") direction = "RIGHT";
+  else if (dir === "DOWN" && direction != "UP") direction = "DOWN";
+}
 
-    function draw() {
-      ctx.fillStyle = "#6c3c0a"; // brown play area
-      ctx.fillRect(0, 0, canvas.width, canvas.height);
+function collision(head, array) {
+  return array.some(part => head.x === part.x && head.y === part.y);
+}
 
-      for (let i = 0; i < snake.length; i++) {
-        ctx.drawImage(snakeImage, snake[i].x, snake[i].y, box, box);
-      }
+function draw() {
+  ctx.fillStyle = "#6c3c0a";
+  ctx.fillRect(0, 0, canvas.width, canvas.height);
 
-      ctx.drawImage(foodImage, food.x, food.y, box, box);
+  for (let i = 0; i < snake.length; i++) ctx.drawImage(snakeImage, snake[i].x, snake[i].y, box, box);
+  ctx.drawImage(foodImage, food.x, food.y, box, box);
 
-      let snakeX = snake[0].x;
-      let snakeY = snake[0].y;
+  let snakeX = snake[0].x;
+  let snakeY = snake[0].y;
 
-      if (direction === "LEFT") snakeX -= box;
-      if (direction === "UP") snakeY -= box;
-      if (direction === "RIGHT") snakeX += box;
-      if (direction === "DOWN") snakeY += box;
+  if (direction === "LEFT") snakeX -= box;
+  if (direction === "UP") snakeY -= box;
+  if (direction === "RIGHT") snakeX += box;
+  if (direction === "DOWN") snakeY += box;
 
-      if (snakeX === food.x && snakeY === food.y) {
-        score++;
-        document.getElementById("score").textContent = "Score: " + score;
-        food = {
-          x: Math.floor(Math.random() * 19 + 1) * box,
-          y: Math.floor(Math.random() * 19 + 1) * box
-        };
-
-        if (score % 5 === 0) {
-          level++;
-          document.getElementById("level").textContent = "Level: " + level;
-          speed = Math.max(60, speed - 20);
-          clearInterval(game);
-          game = setInterval(draw, speed);
-        }
-      } else {
-        snake.pop();
-      }
-
-      const newHead = { x: snakeX, y: snakeY };
-
-      if (
-        snakeX < 0 ||
-        snakeY < 0 ||
-        snakeX >= canvas.width ||
-        snakeY >= canvas.height ||
-        collision(newHead, snake)
-      ) {
-        clearInterval(game);
-        ctx.fillStyle = "red";
-        ctx.font = "40px Arial";
-        ctx.fillText("GAME OVER", 100, 200);
-        restartBtn.style.display = "inline-block";
-        return;
-      }
-
-      snake.unshift(newHead);
-    }
-
-    function restartGame() {
-      snake = [{ x: 9 * box, y: 10 * box }];
-      food = {
-        x: Math.floor(Math.random() * 19 + 1) * box,
-        y: Math.floor(Math.random() * 19 + 1) * box
-      };
-      direction = null;
-      score = 0;
-      level = 1;
-      speed = 200;
-      document.getElementById("score").textContent = "Score: 0";
-      document.getElementById("level").textContent = "Level: 1";
-      restartBtn.style.display = "none";
+  if (snakeX === food.x && snakeY === food.y) {
+    score++;
+    document.getElementById("score").textContent = "Score: " + score;
+    food = { x: Math.floor(Math.random() * 19 + 1) * box, y: Math.floor(Math.random() * 19 + 1) * box };
+    if (score % 5 === 0) {
+      level++;
+      document.getElementById("level").textContent = "Level: " + level;
+      speed = Math.max(60, speed - 20);
       clearInterval(game);
       game = setInterval(draw, speed);
     }
+  } else {
+    snake.pop();
+  }
 
-    snakeImage.onload = () => {
-      foodImage.onload = () => {
-        game = setInterval(draw, speed);
-      };
-    };
-  </script>
+  const newHead = { x: snakeX, y: snakeY };
+  if (
+    snakeX < 0 || snakeY < 0 ||
+    snakeX >= canvas.width || snakeY >= canvas.height ||
+    collision(newHead, snake)
+  ) {
+    clearInterval(game);
+    ctx.fillStyle = "red";
+    ctx.font = "40px Arial";
+    ctx.fillText("GAME OVER", 100, 200);
+    restartBtn.style.display = "inline-block";
+    saveHighScore(score);
+    updateHighScoreLabel();
+    return;
+  }
+
+  snake.unshift(newHead);
+  updateHighScoreLabel();
+}
+
+function restartGame() {
+  snake = [{ x: 9 * box, y: 10 * box }];
+  food = { x: Math.floor(Math.random() * 19 + 1) * box, y: Math.floor(Math.random() * 19 + 1) * box };
+  direction = null;
+  score = 0;
+  level = 1;
+  speed = 200;
+  document.getElementById("score").textContent = "Score: 0";
+  document.getElementById("level").textContent = "Level: 1";
+  restartBtn.style.display = "none";
+  clearInterval(game);
+  game = setInterval(draw, speed);
+}
+
+function saveHighScore(newScore) {
+  let scores = JSON.parse(localStorage.getItem("bee_high_scores")) || [];
+  scores.push(newScore);
+  scores.sort((a, b) => b - a);
+  scores = scores.slice(0, 5);
+  localStorage.setItem("bee_high_scores", JSON.stringify(scores));
+  showHighScores();
+}
+
+function showHighScores() {
+  const scores = JSON.parse(localStorage.getItem("bee_high_scores")) || [];
+  let html = "<h3>🏆 High Scores</h3><ul style='list-style:none;padding:0'>";
+  scores.forEach((sc) => {
+    html += `<li>${sc}</li>`;
+  });
+  html += "</ul>";
+  highScoresDiv.innerHTML = html;
+}
+
+function startGame() {
+  const nameInput = document.getElementById("player-name");
+  if (!nameInput.value.trim()) {
+    alert("Please enter your name to start!");
+    return;
+  }
+  playerName = nameInput.value.trim();
+  startBox.style.display = "none";
+  gameContainer.style.display = "block";
+  restartBtn.style.display = "none";
+  showHighScores();
+  game = setInterval(draw, speed);
+}
+
+function updateHighScoreLabel() {
+  const scores = JSON.parse(localStorage.getItem("bee_high_scores")) || [];
+  const topScore = scores[0] || 0;
+  document.getElementById("game-container").setAttribute("data-highscore", "🏆 High Score: " + topScore);
+}
+
+setInterval(updateHighScoreLabel, 500);
+document.getElementById("start-btn").style.display = "inline-block";
+showHighScores();
+</script>
 </body>
 </html>
